assets/stylesheets/base.css
@charset "UTF-8";
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  vertical-align: baseline;
}

html {
  line-height: 1;
}

ol, ul {
  list-style: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

caption, th, td {
  text-align: left;
  font-weight: normal;
  vertical-align: middle;
}

q, blockquote {
  quotes: none;
}
q:before, q:after, blockquote:before, blockquote:after {
  content: "";
  content: none;
}

a img {
  border: none;
}

article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
  display: block;
}

/**
* Importamos los colores
*/
/**
* Mixes
*/
/**
* Importamos los helpers
*/
/**
helpers!
*/
* {
  box-sizing: border-box;
}

* hr {
  border-style: solid;
  border-width: 1px 0 0 0;
}

* img {
  vertical-align: middle;
}

/**
* Backgorund positions
*/
.background-position-bottom {
  background-position: bottom;
}

.background-position-top {
  background-position: top;
}

.background-position-right {
  background-position: right;
}

.background-position-left {
  background-position: left;
}

.background-position-left-bottom {
  background-position: left bottom;
}

.background-position-left-top {
  background-position: left top;
}

.background-position-right-bottom {
  background-position: right bottom;
}

.background-position-right-top {
  background-position: right top;
}

/**
* Backgorund sizes
*/
.background-size-contain {
  background-size: contain;
}

.background-size-cover {
  background-size: cover;
}

/**
* Background opacities
*/
.background-opacity-black-01 {
  background-color: rgba(0, 0, 0, 0.1);
}

.background-opacity-black-02 {
  background-color: rgba(0, 0, 0, 0.2);
}

.background-opacity-black-03 {
  background-color: rgba(0, 0, 0, 0.3);
}

.background-opacity-black-04 {
  background-color: rgba(0, 0, 0, 0.4);
}

.background-opacity-black-05 {
  background-color: rgba(0, 0, 0, 0.5);
}

.background-opacity-black-06 {
  background-color: rgba(0, 0, 0, 0.6);
}

.background-opacity-black-07 {
  background-color: rgba(0, 0, 0, 0.7);
}

.background-opacity-black-08 {
  background-color: rgba(0, 0, 0, 0.8);
}

.background-opacity-black-09 {
  background-color: rgba(0, 0, 0, 0.9);
}

/**
* Floats
*/
.float-right {
  float: right;
}

.float-left {
  float: left;
}

.float-none {
  float: none;
}

.clearfix:after {
  content: "";
  display: table;
  clear: both;
}

/* break words */
.word-wrap-break-word {
  -ms-word-wrap: break-word;
  word-wrap: break-word;
}

/**
* Forms
*/
.appearance-none {
  appearance: none;
}

/**
* Interactivity - cursors
*/
.cursor-pointer {
  cursor: pointer;
}

.cursor-auto {
  cursor: auto;
}

.cursor-not-allowed {
  cursor: not-allowed;
}

/**
* Interactivity - resize
*/
.resize-none {
  resize: none;
}

.resize-vertical {
  resize: vertical;
}

.resize-horizontal {
  resize: horizontal;
}

/**
* Interactivity - pointer events
*/
.pointer-events-none {
  pointer-events: none;
}

.pointer-events-auto {
  pointer-events: auto;
}

/**
* Interactivity - user select
*/
.user-select-none {
  user-select: none;
}

.user-select-text {
  user-select: text;
}

/**
* Lists
*/
.list-reset {
  list-style: none;
  margin: 0;
  padding: 0;
}

/**
* Overflows
*/
.overflow-hidden {
  overflow: hidden;
}

.overflow-auto {
  overflow: auto;
}

.overflow-visible {
  overflow: visible;
}

.overflow-x-scroll {
  overflow-x: auto;
}

.overflow-y-scroll {
  overflow-y: auto;
}

.overflow-scroll {
  overflow: scroll;
}

/**
* Positioning
*/
.position-static {
  position: static;
}

.position-fixed {
  position: fixed;
}

.position-absolute {
  position: absolute;
}

.position-relative {
  position: relative;
}

.pin-top {
  top: 0;
}

.pin-right {
  right: 0;
}

.pin-left {
  left: 0;
}

.pin-bottom {
  bottom: 0;
}

/**
* Box Shadows
*/
.box-shadow {
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
}

.box-shadow-medium {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.12), 0 2px 4px 0 rgba(0, 0, 0, 0.08);
}

.box-shadow-large {
  box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.11), 0 5px 15px 0 rgba(0, 0, 0, 0.08);
}

.inner-box-shadow {
  box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.06);
}

.box-shadow-none {
  box-shadow: none;
}

/**
* Z indexs
*/
.z-index-0 {
  z-index: 0;
}

.z-index-10 {
  z-index: 10;
}

.z-index-20 {
  z-index: 20;
}

.z-index-30 {
  z-index: 30;
}

.z-index-40 {
  z-index: 40;
}

.z-index-50 {
  z-index: 50;
}

.z-index-auto {
  z-index: auto;
}

/* Helpers  padding space */
.padding-left-0 {
  padding-left: 0px;
}

.padding-right-0 {
  padding-right: 0px;
}

.padding-top-0 {
  padding-top: 0px;
}

.padding-bottom-0 {
  padding-bottom: 0px;
}

.padding-both-0 {
  padding: 0px;
}

.padding-left-5 {
  padding-left: 5px;
}

.padding-right-5 {
  padding-right: 5px;
}

.padding-top-5 {
  padding-top: 5px;
}

.padding-bottom-5 {
  padding-bottom: 5px;
}

.padding-both-5 {
  padding: 5px;
}

.padding-left-10 {
  padding-left: 10px;
}

.padding-right-10 {
  padding-right: 10px;
}

.padding-top-10 {
  padding-top: 10px;
}

.padding-bottom-10 {
  padding-bottom: 10px;
}

.padding-both-10 {
  padding: 10px;
}

.padding-left-20 {
  padding-left: 20px;
}

.padding-right-20 {
  padding-right: 20px;
}

.padding-top-20 {
  padding-top: 20px;
}

.padding-bottom-20 {
  padding-bottom: 20px;
}

.padding-both-20 {
  padding: 20px;
}

.padding-left-30 {
  padding-left: 30px;
}

.padding-right-30 {
  padding-right: 30px;
}

.padding-top-30 {
  padding-top: 30px;
}

.padding-bottom-30 {
  padding-bottom: 30px;
}
/* ... */

